@@ -1,3 +1,9 @@
+2005-03-10  Boris Kolpackov  <boris@kolpackov.net>
+
+	* implicit.c (pattern_search): Mark an intermediate target as
+	precious if it happened to be a prerequisite of some (other)
+	target. Fixes Savannah bug #12267.
+
 2005-03-09  Boris Kolpackov  <boris@kolpackov.net>
 
 	* main.c (main): Use o_file instead of o_default when defining
